gitlab/deployment-gitlab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-gitlab
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab-container
        image: gitlab/gitlab-ce:16.11.0-ce.0
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "6Gi"
            cpu: "2"
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: gitlab-config
          mountPath: /etc/gitlab
      volumes:
      - name: gitlab-config
        persistentVolumeClaim:
          claimName: gitlab-config-pvc

---
