gitlab/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-redis
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-container
        image: redis:latest
        ports:
        - containerPort: 6379
