gitlab/gitlab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
  namespace: gitlab
spec:
  selector:
    app: gitlab
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
