gitlab/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-gitlab
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
      - name: gitlab-container
        image: gitlab/gitlab-ce:16.11.0-ce.0
        # resources:
        #   requests:
        #     memory: "2Gi"
        #     cpu: "1"
        #   limits:
        #     memory: "6Gi"
        #     cpu: "2"
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: gitlab-config
          mountPath: /etc/gitlab
        - name: gitlab-data
          mountPath: /var/opt/gitlab
      volumes:
      - name: gitlab-config
        persistentVolumeClaim:
          claimName: gitlab-config-pvc
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: gitlab-data-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitlab
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - yoursite.com
    secretName: gitlab-tls
  rules:
  - host: yoursite.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gitlab-svc
              port:
                number: 80
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-postgres
  namespace: gitlab
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres-container
        image: postgres:latest
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: gitlab
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-redis
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-container
        image: redis:latest # redis:7.0.15-alpine3.20
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: gitlab
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
  namespace: gitlab
spec:
  selector:
    app: gitlab
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
