gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitlab
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - yoursite.com
    secretName: gitlab-tls
  rules:
  - host: yoursite.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gitlab-svc
              port:
                number: 80
